@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+16-Jul-2008 (Zesstra)
+  - (comm.c, autoconf/configure.in, config.h.in)
+      MAX_OUTCONN is now configurable with an configure switch
+      (--with-max_net_connects), closes Bug #486.
+
 12-Jul-2008 (Zesstra)
   - (interpret.h) removed duplicate and inconsistent prototype for
       last_instructions and moved prototype for f_last_instructions() into the
